# jmthornton

./: .babelrc  .cljfmt.edn  .datignore  .gitignore  .gitlab-ci.yml  .gitmodules  .htaccess  .snyk  .travis.yml  404.html  AGENT.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README  README.md  _headers  _redirects  astro.config.mjs  changelog.md  dat.json  deps.edn  env.edn  geekprofile.html  humans.txt  index.html  license  notes.txt  now.html  package-lock.json  package.json  profile.html  project.clj  pyproject.toml  readme  release.md  robots.txt  stephandjade.html  todo.md  (+2 more)
.dat/: content.bitfield  content.key  content.signatures  content.tree  metadata.bitfield  metadata.data  metadata.key  metadata.signatures  metadata.tree
.well-known/: dat
_nsr/: README.md  index.html  view.txt
_nsrbiz/: index.html
blog/: .gitignore  .htaccess  feed.xml  index.html  robots.txt  sitemap.xml
db/: db.edn
docs/: README.md
etc/: notes  notes.md
gallery/: index.html
jmthornton/: main.py  news.py
layout/: footer.html  nav.html
layouts/: page.html
lib/: build.js  compile-md.js  helpers.js  instantpage.js  oneko.js  trail.js
p/: .htaccess  about-site.html  resume.html  sitemap.xml  webminer.html
pages/: about.html  contact.html  meet.html  projects-old.html  projects.html
projects/: every-city.html  help.html  tribute.html  visit-again.html  weather.html  wind-map.html
public/: _headers
sixième/: index.html
src/: barogram-body.html  barogram-scripts.html  build.js  compile-md.js  pack.js
tests/: test_jmthornton.py
tools/: bh  dencode.html  jwt.html  (+7 more)
(+421 files in other folders)
